--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<html lang="en" >
-"Hello World"
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>UAH Library</title>
+    </head>
+    <body>
+        <div id="container">
+            Hello World
+        </div>
+    </body>
+    <script src="./build/bundle.js"></script>
 </html>
