Initial Routing setup

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <title>UAH Library</title>
     </head>
     <body>
-        <div id="container">
-            Hello World
-        </div>
+        <div id="container"></div>
+        <script src="build/bundle.js"></script>
     </body>
-    <script src="./build/bundle.js"></script>
 </html>
